# sarufi-rs

./: .env  .gitignore  Cargo.toml  README.md  getResponse.json  postResponse.json
src/: bot.rs  errors.rs  lib.rs  test.rs  utils.rs
src/api/: mod.rs
src/data/: test.json
