[package]
name = "sarufi-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A rust implementation for the sarufi API"
authors = ["Elisha Bulalu <elishabulalu031@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simple_logger = "1.11"
async-recursion = "1.0.4"
dotenv = "0.15.0"
failure = "0.1"
walkdir = "2.3"
uuid = { version = "1.3.1", features = ["v4"] }


[[test]]
name = "test"
path = "./src/test.rs"

[dev-dependencies]
insta = "1.8.0"


